# smf-getting-started

./: .gitignore  .gitmodules  CMakeLists.txt
python/: CMakeLists.txt  python_env  requirements.txt
python/tests/: test_demo.py
schema/: demo_service.fbs
src/: CMakeLists.txt
src/client/: main.cc
src/server/: main.cc
